[project]
name = "finrl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alpaca-py>=0.37",
    "alpaca-trade-api>=3",
    "ccxt>=3",
    "elegantrl",
    "gputil>=1.4.0",
    "gymnasium>=1.2.3",
    "importlib-metadata>=6.0,<=8.5.0",
    "jqdatasdk>=1",
    "lz4>=4.4.5",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "pandas-market-calendars>=5",
    "pre-commit>=4.5.1",
    "pyfolio-reloaded>=0.9",
    "pyportfolioopt>=1",
    "pytest>=9.0.2",
    "quantstats>=0.0.64",
    "ray[default,tune]>=2",
    "scikit-learn>=1",
    "scipy>=1.17.0",
    "selenium>=4",
    "stable-baselines3[extra]>=2.0.0a5",
    "stockstats>=0.5",
    "swig>=4.4.1",
    "tensorboard>=2.20.0",
    "webdriver-manager>=4",
    "wrds>=3",
    "yfinance>=0.2",
]

[tool.uv.sources]
elegantrl = { git = "https://github.com/AI4Finance-Foundation/ElegantRL.git" }
